--- a/references.bib
+++ b/references.bib
@@ -30,6 +30,14 @@
 }
 
 
+@article{Lintusaari2016,
+	title = {Fundamentals and Recent Developments in Approximate {Bayesian} Computation},
+	doi = {10.1093/sysbio/syw077},
+	journal = {Systematic Biology},
+	author = {Lintusaari, Jarno and Gutmann, Michael U. and Dutta, Ritabrata and Kaski, Samuel and Corander, Jukka},
+	year = {2016}
+}
+
 @misc{Stadler2009a,
 	title = {Sampling Version 0.5: Software for Simulating Haplotypes in Non-Equilibrium Subdivided Populations},
 	url = {http://guanine.evolbio.mpg.de/sampling/},
