--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,19 @@
   doi = {10.1137/S0036144504446436},
 }
 
+
+
+@article{Rousset2017,
+	title = {The summary-likelihood method and its implementation in the {Infusion} package},
+	volume = {17},
+	doi = {10.1111/1755-0998.12627},
+	journal = {Molecular Ecology Resources},
+	author = {Rousset, François and Gouy, Alexandre and Martinez-Almoyna, Camille and Courtiol, Alexandre},
+	year = {2017},
+	pages = {110--119}
+}
+
+
 @article{Hudson2002,
 	title = {Generating samples under a {Wright}-{Fisher} neutral model of genetic variation},
 	volume = {18},
