references ABC added

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,28 @@
+
+@article{Beaumont2002,
+	title = {Approximate {Bayesian} computation in population genetics},
+	volume = {162},
+	number = {4},
+	journal = {Genetics},
+	author = {Beaumont, Mark A. and Zhang, Wenyang and Balding, David J.},
+	month = dec,
+	year = {2002},
+	pages = {2025--2035}
+}
+
+
+@article{Bertorelle2010,
+	title = {{ABC} as a flexible framework to estimate demography over space and time: some cons, many pros},
+	volume = {19},
+	doi = {10.1111/j.1365-294X.2010.04690.x},
+	number = {13},
+	journal = {Molecular Ecology},
+	author = {Bertorelle, G. and Benazzo, A. and Mona, S.},
+	year = {2010},
+	pages = {2609--2625}
+}
+
+
 @Manual{Chen2011,
     title = {Overlapping Codon Model, Phylogenetic Clustering, and Alternative
            Partial Expectation Conditional Maximization Algorithm},
@@ -5,6 +30,19 @@
     journal = {Ph.D. Diss., Iowa Stat University},
     year = {2011},
     url = {http://gradworks.umi.com/34/73/3473002.html},
+}
+
+
+
+@article{Csillery2010,
+	title = {Approximate {Bayesian} Computation ({ABC}) in practice},
+	volume = {25},
+	doi = {10.1016/j.tree.2010.04.001},
+	number = {7},
+	journal = {Trends in Ecology \& Evolution},
+	author = {Csilléry, Katalin and Blum, Michael G.B. and Gaggiotti, Oscar E. and François, Olivier},
+	year = {2010},
+	pages = {410--418}
 }
   
 @article{Diaconis2007,
@@ -31,6 +69,21 @@
 }
 
 
+
+@article{Haller2017,
+	title = {{SLiM} 2: {Flexible}, Interactive Forward Genetic Simulations},
+	volume = {34},
+	doi = {10.1093/molbev/msw211},
+	number = {1},
+	journal = {Molecular Biology and Evolution},
+	author = {Haller, Benjamin C. and Messer, Philipp W.},
+	year = {2017},
+	pages = {230--240}
+}
+
+
+
+
 @article{Hudson2002,
 	title = {Generating samples under a {Wright}-{Fisher} neutral model of genetic variation},
 	volume = {18},
@@ -40,6 +93,20 @@
 	author = {Hudson, Richard R.},
 	year = {2002},
 	pages = {337--338}
+}
+
+
+
+@article{Kelleher2016,
+	title = {Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes},
+	volume = {12},
+	issn = {1553-7358},
+	doi = {10.1371/journal.pcbi.1004842},
+	number = {5},
+	journal = {PLOS Computational Biology},
+	author = {Kelleher, Jerome and Etheridge, Alison M. and McVean, Gilean},
+	year = {2016},
+	pages = {e1004842}
 }
 
 
