--- a/main.Rnw
+++ b/main.Rnw
@@ -19,12 +19,12 @@
 
 
 \makeglossaries
- 
+
 \newglossaryentry{reftable}
 {   name=reference table,
     description={data matrix that contains for each simulations the value of the parameters and summary statistics}
 }
-
+\newacronym{abc}{ABC}{approximate Bayesian computation}
 
 
 
@@ -33,7 +33,7 @@
 
 \bibliographystyle{abbrvnat}
 
-\title{A Biologist Guide to Approximate Bayesian Computation in Population Genetics}
+\title{A Beginners Guide to Approximate Bayesian Computation in Population Genetics}
 
 \author[1,2,*]{Miguel Navascués}
 \affil[1]{INRA, UMR CBGP, F-34988 Montferrier-sur-Lez, France}
@@ -56,8 +56,13 @@ read_chunk("src/main.r")
 <<rcode_0, cache=FALSE, tidy=TRUE, echo=FALSE>>=
 @
 
+\section*{Introduction}
 
-\section*{Introduction to the likelihood}
+Work in progress...
+
+\section*{Classical ABC}
+
+\subsection*{Likelihood}
 
 \paragraph*{\href{http://en.wikipedia.org/wiki/Bernoulli_trial}{The experiment}:} A coin is tossed 10 times and the results (heads/tails, or head/tree in our case) are recorded
 
@@ -200,7 +205,7 @@ abline(v = CI95[1], lty = 2, col = 2, lwd = 2)
 abline(v = CI95[2], lty = 2, col = 2, lwd = 2)
 @
 
-\section*{A is for Approximation (1 of 3: Simulation)}
+\subsection*{A is for Approximation (1 of 3: Simulation)}
 
 Lets assume that our experiment is decribed by a model that does not have an analytical solution. Likelihood can be estimated with Monte Carlo methods. In this context a simulation is the production of data from a probabilistic model using \href{http://en.wikipedia.org/wiki/Pseudorandom_number_generator}{(pseudo)random numbers} to decide the outcome. In the case of the flip coin experiment, we can simulate flipping the coin by using the binomial distribution:
 
@@ -240,7 +245,7 @@ lines(x   = likelihood_profile_approx$p ,
 % @
 
 
-\section*{B is for Bayesian\footnote{But see \citet{Rousset2017}}}
+\subsection*{B is for Bayesian\footnote{But see \citet{Rousset2017}}}
 
 The posterior probability is the probability of the parameter $p$ given the data $D$: $P(p|D)$. Using Bayes' Theorem: $P(p|D)=\frac{P(D|p)P(p)}{P(D)}$, where $P(D|p)=L(p|D)$ is the likelihood and $P(p)$ is the prior probability. The marginal likelihood, $P(D)$, is constant and does not need to be calculated: $P(p|D)\propto L(p|D)P(p)$.
 
@@ -271,22 +276,19 @@ In {\tt R}:
 <<rcode_9b, cache=FALSE, tidy=TRUE>>=
 @
 
+The values of $p$ from the simulations kept after applying the rejection algorithm are used to estimate the posterior probability distribution. In this simple case (coin flipping experiment) we did not need to estimate it is known when using a conjugate prior such as the beta distribution, $\mathrm{B}(\alpha,\beta)$. Thus, the posterior distribution is $\mathrm{B}(\alpha+\mathrm{\#heads},\beta+\mathrm{\#tails})$, in our case $\mathrm{B}(1+\Sexpr{heads_count},1+\Sexpr{tails_count})$. Note that the uniform distribution $\mathrm{U}(0,1)$ is the same as beta distribution $\mathrm{B}(1,1)$. 
 
-\noindent Code for figure~\ref{fig:scatterplot_coin}:
-<<scatterplot_coin, fig.height=6, fig.width=6, echo=TRUE, fig.cap="Simulations of coin tosses. Paramter $p$ taken from a uniform distribution.">>=
+\noindent Code for figure~\ref{fig:abc_rejection_coin}:
+<<abc_rejection_coin, fig.height=10, fig.width=6, echo=TRUE, fig.cap="Simulations of coin tosses. Paramter $p$ taken from a uniform distribution.">>=
+par(mfrow=c(2,1),mar=c(4.2,4.2,1,1))
+
 plot(x    = sim_parameter_p1,
      y    = sim_data_p1,
      xlab = expression(italic(p)*"'"),
      ylab = expression(italic(D)*"'"))
 abline(h = heads_count, col = 7)
 points(sim_parameter_kept_p1, sim_data_kept_p1, col = 7)
-@
 
-The values of $p$ from the simulations kept after applying the rejection algorithm are used to estimate the posterior probability distribution. In this simple case (coin flipping experiment) we did not need to estimate it is known when using a conjugate prior such as the beta distribution, $\mathrm{B}(\alpha,\beta)$. Thus, the posterior distribution is $\mathrm{B}(\alpha+\mathrm{\#heads},\beta+\mathrm{\#tails})$, in our case $\mathrm{B}(1+\Sexpr{heads_count},1+\Sexpr{tails_count})$. Note that the uniform distribution $\mathrm{U}(0,1)$ is the same as beta distribution $\mathrm{B}(1,1)$. 
-
-
-\noindent Code for figure~\ref{fig:hist_coin}:
-<<hist_coin, fig.pos="p!", fig.height=6, fig.width=6, echo=TRUE, fig.cap="Probability distribution. Grey histogram: prior probability distribution. Vermillion histogram: estimated posterior probability distribution. Vermillion line: true posterior probability distribution (beta distribution).">>=
 hist(x      = sim_parameter_p1,
      breaks = seq(0,1,0.02),
      col    = "grey",
@@ -306,6 +308,8 @@ lines(x   = seq(0,1,0.001),
       lwd = 3)
 @
 
+
+
 From the prior probability distribution we can obtain a point estimates (usually the median) and 95\% highest posterior denstity: 
 
 <<rcode_10, cache=FALSE, tidy=TRUE>>=
@@ -321,7 +325,7 @@ Point estimate of parameter is $\hat{p}=\Sexpr{round(p_hat,2)}$ with (\Sexpr{rou
 
 
 
-\section*{C is \textit{not} for Coalescent}
+\subsection*{C is \textit{not} for Coalescent}
 
 <<rcode_13, echo=F, hide=T, cache=F>>=
 @
@@ -350,7 +354,7 @@ box()
 
 The generating model for such data is the coalescent. We will be using a version of {\tt ms} coalescent simulator \citep{Hudson2002} implemented in the R package {\tt phyclust} \citep{Chen2011}. This is a choice to make the present tutorial available to different operative systems (i.e. Windows). %However, in my experience, {\tt ms} implementation in {\tt phyclust} suffers some problems and there seem to be bugs for complex demographies. For real data analysis I use the original {\tt ms} software in a Linux environment (see box).
 
-\section*{A is for Approximation (2 of 3: Summary Statistics)}
+\subsection*{A is for Approximation (2 of 3: Summary Statistics)}
 
 We have, thus, a new tyope of data (DNA sequences) and its corresponding data simulator (the coalescent). We could try to apply the same rejection algorithm described above, but the structure of the data is more complex and an exact match would occur rarely in simulations. So we use the second approximation of ABC, instead of the data we use summary statistics ($S$) from the data to classify the simulation as a match to the observation. It is said now that we are approximating the likelihood of $p$ given the summary statistic, $L(p|S)$, rather than the likelihood of $p$ given the data, $L(p|D)$.
 
@@ -382,8 +386,10 @@ We can apply this algorthim to our Dataset 1, simulating with the coalescent sim
 <<rcode_16, cache=F, tidy=TRUE>>=
 @
 
-\noindent Code for figure~\ref{fig:scatterplot_coal1}:
-<<scatterplot_coal1, fig.height=6, fig.width=6, echo=TRUE, fig.cap="Coalescent simulations. Paramter $\\theta$ is taken from a log-uniform distribution.">>=
+\noindent Code for figure~\ref{fig:abc_rejection_coal}:
+<<abc_rejection_coal, fig.height=10, fig.width=6, echo=TRUE, fig.cap="Coalescent simulations. Paramter $\\theta$ is taken from a log-uniform distribution.">>=
+par(mfrow=c(2,1),mar=c(4.2,4.2,1,1))
+
 plot( x    = log10(sim_theta),
       y    = sim_SS,
       xlab = expression(log[10](theta*"'")),
@@ -391,12 +397,7 @@ plot( x    = log10(sim_theta),
       ylim = c(0,100))
 abline(h = target_SS, col = 7)
 points(log10(sim_theta_kept), sim_SS_kept, col = 7)
-@
 
-The number of simulations kept is \Sexpr{length(sim_SS_kept)} out of \Sexpr{length(sim_SS)}.\\
-
-\noindent Code for figure~\ref{fig:hist_coal1}:
-<<hist_coal1, fig.pos="p!", fig.height=6, fig.width=6, echo=TRUE, fig.cap="Probability distribution. Grey histogram: prior probability distribution. Vermillion histogram: estimated posterior probability distribution.">>=
 hist(x      = log10(sim_theta),
      breaks = seq(-1,2,0.05),
      col    = "grey",
@@ -412,11 +413,13 @@ hist(x      = log10(sim_theta_kept),
      add    = TRUE); box()
 @
 
-\paragraph{Exercise 6:} Apply ABC rejection algorithm to Dataset 2 using a different summary statistic, such as the nucletide diversity,  $\pi$ ({\tt pi}). Repeat using several summary statistics.\\
+The number of simulations kept is \Sexpr{length(sim_SS_kept)} out of \Sexpr{length(sim_SS)}.\\
+
+\paragraph{Exercise 6:} Apply \acrshort{abc} rejection algorithm to Dataset 2 using a different summary statistic, such as the nucletide diversity,  $\pi$ ({\tt pi}). Repeat using several summary statistics.\\
 % <<Exercise6, echo=F, hide=T, cache=F>>=
 % @
 
-\section*{A is for Approximation (3 of 3: Tolerance)}
+\subsection*{A is for Approximation (3 of 3: Tolerance)}
 
 Summarizing the data into statistics is not enough (in practice) to allow a big enough number of simulations to match the observed data. The third approximation in ABC allows to accept simulations that are not an exact match but are in the close neighbourhood of the observation.
 
@@ -441,8 +444,10 @@ From this point we are goint to start using functions from the {\tt R} package {
 <<rcode_17, cache=F, tidy=TRUE>>=
 @
 
-\noindent Code for figure~\ref{fig:scatterplot_coal2}:
-<<scatterplot_coal2, fig.height=6, fig.width=6, echo=TRUE, fig.cap="Coalescent simulations. Paramter $\\theta$ is taken from a log-uniform distribution.">>=
+\noindent Code for figure~\ref{fig:abc_rejection_tolerance}:
+<<abc_rejection_tolerance, fig.height=10, fig.width=6, echo=TRUE, fig.cap="Coalescent simulations. Paramter $\\theta$ is taken from a log-uniform distribution.">>=
+par(mfrow=c(2,1),mar=c(4.2,4.2,1,1))
+
 plot(x    = log10(sim_theta),
      y    = sim_SS,
      xlab = expression(log[10](theta*"'")),
@@ -452,12 +457,7 @@ abline(h = target_SS, col = 7)
 abline(h = max(abc_result$ss), col = 7, lty = 2)
 abline(h = min(abc_result$ss), col = 7, lty = 2)
 points(log10(sim_theta_kept_tol1), sim_SS_kept_tol1, col = 7)
-@
 
-The number of simulations kept is \Sexpr{length(sim_theta_kept_tol1)} out of \Sexpr{dim(sim_SS)[1]}; determined by tolerance of \Sexpr{tolerance}.\\
-
-\noindent Code for figure~\ref{fig:hist_coal2}:
-<<hist_coal2, fig.pos="p!", fig.height=6, fig.width=6, echo=TRUE, fig.cap="Probability distribution. Grey histogram: prior probability distribution. Vermillion histogram: estimated posterior probability distribution.">>=
 hist(x      = log10(sim_theta),
      breaks = seq(-1,2,0.05),
      col    = "grey",
@@ -473,17 +473,25 @@ hist(x      = log10(sim_theta_kept_tol1),
      add    = TRUE); box()
 @
 
+The number of simulations kept is \Sexpr{length(sim_theta_kept_tol1)} out of \Sexpr{dim(sim_SS)[1]}; determined by tolerance of \Sexpr{tolerance}.\\
+
+
 \paragraph{Exercise 7:} Reanalyse the data using different tolerance values. What happens when we get tolerance values close to 1?\\
 % <<Exercise7, echo=F, hide=T, cache=F>>=
 % @
 
-\section*{Regression}
+\subsection*{Regression}
+
+Introduced by \citet{Beaumont2002}
+
 
 <<rcode_18, cache=F, tidy=TRUE>>=
 @
 
-\noindent Code for figure~\ref{fig:scatterplot_coal3}:
-<<scatterplot_coal3, fig.height=6, fig.width=6, echo=TRUE, fig.cap="Coalescent simulations. Paramter $\\theta$ is taken from a log-uniform distribution.">>=
+\noindent Code for figure~\ref{fig:abc_regression}:
+<<abc_regression, fig.height=10, fig.width=6, echo=TRUE, fig.cap="Coalescent simulations. Paramter $\\theta$ is taken from a log-uniform distribution.">>=
+par(mfrow=c(2,1),mar=c(4.2,4.2,1,1))
+
 plot(x    = log10(sim_theta),
      y    = sim_SS,
      xlab = expression(log[10](theta*"'")),
@@ -506,12 +514,6 @@ arrows(x0     = log10(sim_theta_kept)[1:10],
        y1     = target_SS,
        col    = 5,
        length = 0.1)
-@
-
-
-
-\noindent Code for figure~\ref{fig:hist_coal3}:
-<<hist_coal3, fig.pos="p!", fig.height=6, fig.width=6, echo=TRUE, fig.cap="Probability distribution. Grey histogram: prior probability distribution. Blue histogram: estimated posterior probability distribution with rejection.  Yellow histogram: estimated posterior probability distribution with rejection+regression.">>=
 hist(x      = log10(sim_theta),
      breaks = seq(-1,2,0.05),
      col    = "grey",
@@ -530,7 +532,8 @@ wtd.hist(x      = log10(sim_theta_adjusted),
 @
 
 
-\section*{Information on Summary Statistics}
+
+\subsection*{Information on Summary Statistics}
 
 Now that we have determined that using the rejection plus regression approach is the way to go we can apply it to estimate $\theta$:
 
@@ -608,7 +611,7 @@ wtd.hist(x      = log10(sim_theta_adjusted_pi_noise),
 @
 
 
-\section*{Beware of the Prior}
+\subsection*{Beware of the Prior}
 
 Priors, as discussed above, can be used to incroporate previous information on the parameters. In the case of our population genetics example, we could imagine to have some information on mutation rates (e.g. from pedigrees) and population sizes (from census). Since $\theta=4N_e\mu$, we could draw parameters $N_e$ and $\mu$ from prior probability distributions and combine them to get the prior of $\theta$:
 
@@ -634,7 +637,7 @@ ALWAYS COMPARE POSTERIOR AND PRIOR PROBABILITY DISTRIBUTIONS!!!
 <<Exercise9, echo=F, cache=F, fig.show='hide'>>=
 @
 
-\section*{Quality Control 1: Cross Validation}
+\subsection*{Quality Control 1: Cross Validation}
 
 The package {\tt abc} includes a function for cross validation:
 <<rcode_24, cache=F, tidy=TRUE>>=
@@ -652,28 +655,28 @@ abline(a = 0, b = 1)
 
 
 
-\section*{Quality Control 2: Goodness of fit (prior)}
+\subsection*{Quality Control 2: Goodness of fit (prior)}
 
 Are simulations from the model and priors producing data similar to observed data? 
 
 figure~\ref{fig:GoodnessFit1}:
 <<GoodnessFit1, fig.height=8, fig.width=6, echo=TRUE, fig.cap="Goodness of fit.">>=
 par(mfrow=c(3,1),mar=c(4.2,4.2,1,1))
-plot(sim_S,sim_pi,xlab="S",ylab=expression(pi),log="xy")
+plot(sim1_S,sim1_pi,xlab="S",ylab=expression(pi),log="xy")
 points(target1_S,target1_pi,col=7,cex=4,pch="*")
 points(target2_S,target2_pi,col=6,cex=4,pch="*")
 
-plot(sim_NH,sim_pi,xlab="Number of Haplotypes",ylab=expression(pi),log="xy")
+plot(sim1_NH,sim1_pi,xlab="Number of Haplotypes",ylab=expression(pi),log="xy")
 points(target1_NH,target1_pi,col=7,cex=4,pch="*")
 points(target2_NH,target2_pi,col=6,cex=4,pch="*")
 
-plot(sim_FuLiD,sim_pi,xlab="Fu and Li's D",ylab=expression(pi),log="y",xlim=c(-6,2))
+plot(sim1_FuLiD,sim1_pi,xlab="Fu and Li's D",ylab=expression(pi),log="y",xlim=c(-6,2))
 points(target1_FuLiD,target1_pi,col=7,cex=4,pch="*")
 points(target2_FuLiD,target2_pi,col=6,cex=4,pch="*")
 par(mfrow=c(1,1),mar=c(5.1,4.1,4.1,2.1))
 @
 
-\section*{Quality Control 3: Goodness of fit (posterior)}
+\subsection*{Quality Control 3: Goodness of fit (posterior)}
 
 We can also verify the goodness of fit of the inferred parameters. We can sample from the posterior distribution by using the regression-adjusted values of the retained simulations. We can re-simulate data from those values to obtain the expected distribution of summary statistics under the posterior and compare it with the observation:
 <<rcode_25, cache=F, tidy=TRUE>>=
@@ -700,7 +703,7 @@ abline(v = target1_FuLiD, col = 7, lwd = 2); box()
 % <<Exercise10, echo=F, results=F, cache=F, fig.show='hide'>>=
 % @
 
-\section*{Model Choice}
+\subsection*{Model Choice}
 
 We are going to consider two models. A constant size model with parameter $\theta=4N_e\mu$ and a population with one instantaneous change of size with parameters $\theta_0=4N_{e0}\mu$ (present scaled mutation rate), $\tau=t\mu$ (mutation scaled time of population size change) and $\theta_1=4N_{e1}\mu$ (past scaled mutation rate). We already have simulations for the first model, we can add the simulations for the second model.
 
@@ -727,20 +730,135 @@ points(target1_FuLiD,target1_pi,col=7,cex=3,pch="*")
 points(target2_FuLiD,target2_pi,col=6,cex=3,pch="*")
 @
 
+
+
+
 We put together the two \gls{reftable}s.
+<<rcode_27, cache=F, tidy=TRUE>>=
+@
 
-\section*{Further reading}
+And we performed an ABC rejection+regression on the model. The main differences is that it is a logistic regression because the model is a qualitative variable:
 
-There are several reviews on abc:
+<<rcode_28, cache=F, tidy=TRUE>>=
+@
 
-\citet{Lintusaari2016} for application to phylogenetics
+The best model for Dataset 1 is \Sexpr{names(which(abc_model_choice1$pred==max(abc_model_choice1$pred)))} (C for constant, V for varable population size), with a posterior probability of \Sexpr{max(abc_model_choice1$pred)}
+
+The best model for Dataset 2 is \Sexpr{names(which(abc_model_choice2$pred==max(abc_model_choice2$pred)))} (C for constant, V for varable population size), with a posterior probability of \Sexpr{max(abc_model_choice2$pred)}
+
+
+
+\section*{ABC random forest}
+
+
+\subsection*{One tree: classification and regression tree}
+
+A decission tree is a simple machine learning model for target quantitative (regression)  or qualitative (classification) variables: 
+
+<<rcode_29, cache=F, tidy=TRUE>>=
+@
+
+figure~\ref{fig:CARTregression}:
+<<CARTregression, fig.height=8, fig.width=6, echo=TRUE, fig.cap="Regression tree.">>=
+par(mfrow=c(2,1),mar=c(4.2,4.2,1,1))
+
+plot(regression_tree)
+text(regression_tree,cex=0.75)
+
+plot(ref_table$TajD,
+     ref_table$pi,
+     xlab="Tajima's D",
+     ylab=expression(pi),
+     col=cbPalette1[round(log10(theta)+3)],
+     #col=grey(1-theta/max(theta)),
+     pch=20)
+partition.tree(regression_tree,
+               ordvars=c("TajD","pi"),
+               add=T,cex=1)
+@
+
+<<rcode_30, cache=F, tidy=TRUE>>=
+@
+
+figure~\ref{fig:CARTclassification}:
+<<CARTclassification, fig.height=8, fig.width=6, echo=TRUE, fig.cap="Classification tree.">>=
+par(mfrow=c(2,1),mar=c(4.2,4.2,1,1))
+
+plot(classification_tree)
+text(classification_tree,cex=0.75)
+
+plot(ref_table$TajD[which(sim_model=="V")],
+     ref_table$FuLiD[which(sim_model=="V")],
+     xlab="Tajima's D",
+     ylab="Fu and Li's D",
+     pch=20)
+points(ref_table$TajD[which(sim_model=="C")],
+       ref_table$FuLiD[which(sim_model=="C")],
+       col="grey",pch=20)
+partition.tree(classification_tree,
+               ordvars=c("TajD","FuLiD"),
+               add=T,cex=3,col="red")
+@
+
+\subsection*{Many trees: random forest}
+
+<<rcode_31, cache=F, tidy=TRUE>>=
+@
+
+figure~\ref{fig:CARTregression1}:
+<<CARTregression1, fig.height=10, fig.width=6, echo=TRUE, fig.cap="Classification tree.">>=
+par(mfrow=c(3,1),mar=c(4.2,4.2,1,1))
+plot(regression_tree)
+text(regression_tree,cex=0.75)
+
+plot(ref_table$pi,
+     log10(ref_table$theta),
+     xlab=expression(pi),
+     ylab=expression(log[10]*theta),
+     pch=20,log="x")
+partition.tree(regression_tree,
+               ordvars=c("pi","theta"),
+               add=T,cex=1.5,col="blue",lwd=2)
+
+plot(ref_table$pi,
+     log10(ref_table$theta),
+     xlab=expression(pi),
+     ylab=expression(log[10]*theta),
+     pch=20,log="x")
+for (i in 1:100){
+  random_sample <- sample(length(theta),size=100,replace=T)
+  ref_table_random_sample <- ref_table[random_sample,]
+  regression_tree_random_sample <- tree(log10(theta) ~ pi,
+                                        data=ref_table_random_sample)
+  partition.tree(regression_tree_random_sample,
+                 ordvars=c("pi","theta"),
+                 add=T,cex=1.5,col="red",lwd=1)
+  
+}
+@
+
+\subsection*{Application to ABC: model choice}
+
+
+
+\section*{Some further topics}
+
+Other ABC flavours: SMC-ABC
+
+Simulation software: msprime \citep{Kelleher2016}, SLiM \citep{Haller2017}.
+
+There are several reviews on abc: \citep{Csillery2010}, \citep{Bertorelle2010}
+
+Other applications than population genetics: phylogenetics \citep{Lintusaari2016}, community ecology, epidemiology, (astronomy)
 
 
 \section*{Acknowledgements}
 
 I was initiated to the use of {\tt R} for ABC by M. Beaumont, L. Chikhi and V. Sousa at the Gulbenkian course MMPG08.
 
-\printglossaries
+\printglossary[type=\acronymtype]
+ 
+\printglossary
 
 \bibliography{references}
 
