--- a/references.bib
+++ b/references.bib
@@ -58,17 +58,6 @@
 
 
 
-@article{Rousset2017,
-	title = {The summary-likelihood method and its implementation in the {Infusion} package},
-	volume = {17},
-	doi = {10.1111/1755-0998.12627},
-	journal = {Molecular Ecology Resources},
-	author = {Rousset, François and Gouy, Alexandre and Martinez-Almoyna, Camille and Courtiol, Alexandre},
-	year = {2017},
-	pages = {110--119}
-}
-
-
 
 @article{Haller2017,
 	title = {{SLiM} 2: {Flexible}, Interactive Forward Genetic Simulations},
@@ -110,6 +99,9 @@
 }
 
 
+
+
+
 @article{Lintusaari2016,
 	title = {Fundamentals and Recent Developments in Approximate {Bayesian} Computation},
 	doi = {10.1093/sysbio/syw077},
@@ -117,6 +109,44 @@
 	author = {Lintusaari, Jarno and Gutmann, Michael U. and Dutta, Ritabrata and Kaski, Samuel and Corander, Jukka},
 	year = {2016}
 }
+
+
+  @Manual{Marin2017,
+    title = {abcrf: Approximate Bayesian Computation via Random Forests},
+    author = {Jean-Michel Marin and Louis Raynal and Pierre Pudlo and Christian P. Robert and Arnaud Estoup},
+    year = {2017},
+    note = {R package version 1.7},
+    url = {https://CRAN.R-project.org/package=abcrf},
+  }
+
+
+@article{Pudlo2016,
+	title = {Reliable {ABC} model choice via random forests},
+	volume = {32},
+	doi = {10.1093/bioinformatics/btv684},
+	number = {6},
+	journal = {Bioinformatics},
+	author = {Pudlo, Pierre and Marin, Jean-Michel and Estoup, Arnaud and Cornuet, Jean-Marie and Gautier, Mathieu and Robert, Christian P.},
+	year = {2016},
+	pages = {859--866}
+}
+
+
+
+
+
+@article{Rousset2017,
+	title = {The summary-likelihood method and its implementation in the {Infusion} package},
+	volume = {17},
+	doi = {10.1111/1755-0998.12627},
+	journal = {Molecular Ecology Resources},
+	author = {Rousset, François and Gouy, Alexandre and Martinez-Almoyna, Camille and Courtiol, Alexandre},
+	year = {2017},
+	pages = {110--119}
+}
+
+
+
 
 @misc{Stadler2009a,
 	title = {Sampling Version 0.5: Software for Simulating Haplotypes in Non-Equilibrium Subdivided Populations},
