--- a/references.bib
+++ b/references.bib
@@ -134,6 +134,14 @@
 
 
 
+@article{Raynal2017,
+	title = {{ABC} random forests for {Bayesian} parameter inference},
+	journal = {arXiv},
+	author = {Raynal, Louis and Marin, Jean-Michel and Pudlo, Pierre and Ribatet, Mathieu and Robert, Christian P. and Estoup, Arnaud},
+	year = {2017},
+	volume = {1605.05537v4},
+	note = {peer-reviewed by \textit{Peer Community in Evolutionary Biology} doi:10.24072/pci.evolbiol.100036}
+}
 
 @article{Rousset2017,
 	title = {The summary-likelihood method and its implementation in the {Infusion} package},
